k8s/all/99_fio-tools.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fio-tools
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fio-tools
  namespace: fio-tools
spec:
  selector:
    matchLabels:
      app: fio-tools
  template:
    metadata:
      labels:
        app: fio-tools
    spec:
        volumes:
        - name: data
          persistentVolumeClaim:
            claimName: fio-tools
        - name: benchmarks
          emptyDir: {}
        - name: plots
          emptyDir: {}
        containers:
        - name: fio-frontend
          imagePullPolicy: Always
          image: artmr/fio-http-server:0.1
          volumeMounts:
          - name: benchmarks
            mountPath: /server/benchmarks
          - name: plots
            mountPath: /server/plots
          ports:
          - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fio-tools
  name: fio-tools
  namespace: fio-tools
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 31367
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: fio-tools
  type: NodePort
